# Sisyphean

./: PRD.md  README-CN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release-client.yml
apps/client/: PRD.md  package.json
apps/client/scripts/: run-tauri.mjs
apps/client/src/: App.css  App.tsx  main.tsx
apps/client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  vite.config.ts  wrangler.jsonc
apps/web/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
apps/web/src/: App.tsx  index.css
