[package]
name = "sisyphean-client"
version = "0.1.0"
description = "Sisyphean desktop client"
authors = ["hexi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sisyphean_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-global-shortcut = "2.3.1"
dirs = "6.0.0"
chrono = "0.4.44"
anyhow = "1.0.102"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2 = "0.6.4"
tauri-plugin-single-instance = "2.4.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
